--- a/Rohit_Master_Thesis/MastersThesis.tex
+++ b/Rohit_Master_Thesis/MastersThesis.tex
@@ -15,6 +15,8 @@
 \usepackage{forest}
 \usepackage{float}
 
+\usepackage[section]{placeins}
+
 %Added the below two lines for adding chapter number in images
 \usepackage{chngcntr}
 \counterwithin{figure}{section}
