Hopefully the final commit

--- a/Rohit_Master_Thesis/CV.tex
+++ b/Rohit_Master_Thesis/CV.tex
@@ -37,8 +37,8 @@ Address & Henkestrasse 5 \\
 
 \subsection*{\sc Education}
 \begin{tabular}{lp{9cm}}
-09/1977 - 08/1981 &  elementary school\\
-09/1981 - 06/1990 & high school\\
+2003 - 2013 &  elementary school(B.J.M Carmel Academy)\\
+2013 - 2015 & high school(Narayana)\\
 \end{tabular}
 
 \smallskip
@@ -46,8 +46,8 @@ Address & Henkestrasse 5 \\
 
 \subsection*{\sc Study}
 \begin{tabular}{lp{9cm}}
-09/1991 - 08/1993 & University X \\
-09/1993 - 06/1996 & University Y
+2015 - 2019 & Savitribai Phule Pune University \\
+2021 - 2025 & FAU Erlangen-Nürnberg
 \end{tabular}
 
 
@@ -57,7 +57,7 @@ Address & Henkestrasse 5 \\
 
 \subsection*{\sc Other activities}
 \begin{tabular}{lp{9cm}}
-09/1990 - 08/1991 & run up and jump
+2011 - 2013 & Basketball
 \end{tabular}
 
 
