--- a/Rohit_Master_Thesis/2.Theory.tex
+++ b/Rohit_Master_Thesis/2.Theory.tex
@@ -543,7 +543,7 @@ The first step in the whole pipeline involves extracting representative features
 
 \subsubsection*{2D Normalization Flow :}
 
-The 2D flow function is used to project the image features into the hidden variable using a bijective invertible mapping. At the time of inference, the features of anomalous images should be out of distribution and, therefore, will have lower likelihoods than normal images. This likelihood can be used as the anomaly score. Specifically, the sum of the 2D probabilities of each channel is done to obtain the final probability map, and then it is upsampled to the input image resolution using bilinear interpolation. In order to convert the original normalization flow into a 2D format, alternate $3\times3$ and $1\times1$ convolutional layers are used in the default subnet as shown in the figure\ref{fig:fastflow pipeline} to retain the spatial information in the flow model and the loIn the feature extraction stage, the features are extracted using \gls{dnn} as the backbone, such as ResNet[mention reference], which was pre-trained on ImageNet\cite{5206848} dataset \cite{10208786}., CIFAR-10\cite{krizhevsky2009learning}, BTAD\cite{Mishra_2021} datasets. For the MVTec AD dataset, the FastFlow model was compared with many state-of-the-art models with two metrics image-level \gls{auc} and pixel-level \gls{auc}. FastFlow demonstrates exceptional performance in anomaly detection, achieving a 99.4 image-level \gls{auc} and 98.5 pixel-level \gls{auc}, surpassing all the other models. In the case of the CIFAR-10 dataset, FastFlow achieves an \gls{auc} 66.7, which is the best performing model when compared with others. For the BTAD dataset, FastFlow again surpasses all the compared models and achieves a pixel-level \gls{auc} of 97.0 \cite{yu2021fastflowunsupervisedanomalydetection}.
+The 2D flow function is used to project the image features into the hidden variable using a bijective invertible mapping. At the time of inference, the features of anomalous images should be out of distribution and, therefore, will have lower likelihoods than normal images. This likelihood can be used as the anomaly score. Specifically, the sum of the 2D probabilities of each channel is done to obtain the final probability map, and then it is upsampled to the input image resolution using bilinear interpolation. In order to convert the original normalization flow into a 2D format, alternate $3\times3$ and $1\times1$ convolutional layers are used in the default subnet as shown in the figure\ref{fig:fastflow pipeline} to retain the spatial information in the flow model and the loIn the feature extraction stage, the features are extracted using \gls{dnn} as the backbone, such as ResNet, which was pre-trained on ImageNet\cite{5206848} dataset \cite{10208786}., CIFAR-10\cite{krizhevsky2009learning}, BTAD\cite{Mishra_2021} datasets. For the MVTec AD dataset, the FastFlow model was compared with many state-of-the-art models with two metrics image-level \gls{auc} and pixel-level \gls{auc}. FastFlow demonstrates exceptional performance in anomaly detection, achieving a 99.4 image-level \gls{auc} and 98.5 pixel-level \gls{auc}, surpassing all the other models. In the case of the CIFAR-10 dataset, FastFlow achieves an \gls{auc} 66.7, which is the best performing model when compared with others. For the BTAD dataset, FastFlow again surpasses all the compared models and achieves a pixel-level \gls{auc} of 97.0 \cite{yu2021fastflowunsupervisedanomalydetection}.
 
 \subsection{EfficientAD}
 \label{subsec:efficientad}
@@ -605,7 +605,7 @@ The table \ref{tab:model_key_characteristics} summarizes all the models we have 
 \begin{table}[ht!]
 \centering
 \resizebox{\textwidth}{!}{%
-\begin{tabular}{|l|p{0.6\textwidth}|}
+\begin{tabular}{|l|p{0.7\textwidth}|}
 \hline
 \textbf{Model} & \textbf{Key Characteristics} \\ \hline
 YOLO & Real-time object detection; maps pixels to bounding box coordinates and class probabilities \\ \hline
@@ -613,10 +613,10 @@ PatchCore & Uses locally-aware patch features and memory banks for anomaly detec
 DFM (Deep Feature Modelling) & Models normal data distribution using deep feature extraction and density modeling \\ \hline
 EfficientAD & Combines lightweight student-teacher networks with efficient patch descriptors \\ \hline
 FastFlow & Extends normalizing flow models to 2D for feature distribution estimation \\ \hline
-DFKDE (Deep Feature Kernel Density Estimation) & Extracts features with ResNet and applies Kernel Density Estimation on reduced features \\ \hline
+DFKDE (Deep Feature Kernel Density Estimation) & Extracts features with \gls{dnn} and applies Kernel Density Estimation on reduced features \\ \hline
 \end{tabular}%
 }
-\caption{Summary of Models and Their Key Characteristics}
+\caption{Summary of Models and their Key Characteristics}
 \label{tab:model_key_characteristics}
 \end{table}
 
