--- a/Rohit_Master_Thesis/MastersThesis.tex
+++ b/Rohit_Master_Thesis/MastersThesis.tex
@@ -220,9 +220,9 @@ Erlangen, \today \hspace*{2cm} Rohit Potdukhe
 
 % Lebenslauf
 
-%\clearpage
-%\input{CV}
-%\addcontentsline{toc}{section}{Curriculum Vitae}
+\clearpage
+\input{CV}
+\addcontentsline{toc}{section}{Curriculum Vitae}
 \end{document}
 
 
