Resized the table again

--- a/Rohit_Master_Thesis/2.Theory.tex
+++ b/Rohit_Master_Thesis/2.Theory.tex
@@ -605,18 +605,19 @@ The table \ref{tab:model_key_characteristics} summarizes all the models we have 
 \begin{table}[ht!]
 \centering
 \resizebox{\textwidth}{!}{%
-\begin{tabular}{|l|p{0.7\textwidth}|}
+\begin{tabular}{|l|p{0.9\textwidth}|}
 \hline
 \textbf{Model} & \textbf{Key Characteristics} \\ \hline
-YOLO & Real-time object detection; maps pixels to bounding box coordinates and class probabilities \\ \hline
+\gls{yolo} & Real-time object detection; maps pixels to bounding box coordinates and class probabilities \\ \hline
 PatchCore & Uses locally-aware patch features and memory banks for anomaly detection \\ \hline
-DFM (Deep Feature Modelling) & Models normal data distribution using deep feature extraction and density modeling \\ \hline
+\gls{dfm} & Models normal data distribution using deep feature extraction and density modeling \\ \hline
 EfficientAD & Combines lightweight student-teacher networks with efficient patch descriptors \\ \hline
 FastFlow & Extends normalizing flow models to 2D for feature distribution estimation \\ \hline
-DFKDE (Deep Feature Kernel Density Estimation) & Extracts features with \gls{dnn} and applies Kernel Density Estimation on reduced features \\ \hline
+\gls{dfkde} & Extracts features with \gls{dnn} and applies Kernel Density Estimation on reduced features \\ \hline
 \end{tabular}%
 }
 \caption{Summary of Models and their Key Characteristics}
 \label{tab:model_key_characteristics}
 \end{table}
+
 
